packages/edxml-test-corpus/edxml_test_corpus-3.0.1-py3-none-any.whl/edxml_test_corpus/tests/3/3.0/3.0.0/valid/comments-pi/input-001.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~                                                                           ~
  ~                     Copyright (c) 2020 the EDXML Foundation               ~
  ~                                                                           ~
  ~                                  http://edxml.org                         ~
  ~                                                                           ~
  ~                    This file is part of the EDXML Test Corpus             ~
  ~                      and is released under the MIT License:               ~
  ~                        https://opensource.org/licenses/MIT                ~
  ~                                                                           ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--
Test if XML containing comments and processing instructions is accepted.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <!-- comment -->
  <ontology>
    <!-- comment -->
    <object-types>
      <!-- comment -->
      <?foo attr="bar"?>
      <object-type name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" compress="true" data-type="string:10:mc"/>
    </object-types>
    <!-- comment -->
    <concepts>
      <!-- comment -->
      <concept name="a" version="1" description="a" display-name-singular="a" display-name-plural="a"/>
    </concepts>
    <!-- comment -->
    <event-types>
      <!-- comment -->
      <event-type name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <!-- comment -->
        <properties>
          <!-- comment -->
          <property name="a" object-type="a" description="a" optional="true" multivalued="true" confidence="10" merge="match" similar="a">
            <!-- comment -->
            <property-concept name="a" confidence="9" cnp="9"/>
          </property>
          <property name="b" object-type="a" description="b" optional="true" multivalued="true" confidence="10"/>
        </properties>
        <!-- comment -->
        <relations>
          <!-- comment -->
          <other source="a" target="b" description="[[a]] linked to [[b]]" confidence="2" predicate="linked"/>
        </relations>
        <!-- comment -->
        <attachments>
          <!-- comment -->
          <attachment name="a" description="a" display-name-singular="a" display-name-plural="a" media-type="text/plain" encoding="unicode"/>
        </attachments>
      </event-type>
      <!-- comment -->
      <event-type name="b" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <!-- comment -->
        <parent event-type="a" property-map="a:a" parent-description="a" siblings-description="a"/>
        <!-- comment -->
        <properties>
          <!-- comment -->
          <property name="a" object-type="a" description="a" optional="true" multivalued="true" confidence="10" merge="match" similar="a"/>
        </properties>
      </event-type>
    </event-types>
    <!-- comment -->
    <sources>
        <source uri="/a/" description="a" version="1"/>
    </sources>
  </ontology>
  <!-- comment -->
  <event event-type="a" source-uri="/a/">
    <!-- comment -->
    <properties>
      <!-- comment -->
      <a><!-- comment -->a</a>
    </properties>
    <!-- comment -->
    <attachments>
      <!-- comment -->
      <a id="1"><!-- comment -->a</a>
    </attachments>
  </event>
</edxml>
